# linktree

./: .gitignore  Makefile  README.md  build.py  cli.py  db.py  editor.html  links.db  links.txt  linktagger.toml  loader.py  prompts.py  pyproject.toml
.github/workflows/: ci.yml
src/static/: db.js  styles.css
src/templates/: link_page_template.html  macros.html  tag_index_template.html  tag_template.html
