[project]
name = "linktagger"
version = "0.1.0"
description = "A simple Link storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.5",
    "sqlalchemy>=2.0.37",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pagefind[extended]>=1.3.0",
    "ruff>=0.9.2",
    "types-toml>=0.10.8.20240310",
]
