[project]
name = "linktagger"
version = "0.1.0"
description = "A simple Link storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "pagefind-bin>=1.3.0",
    "pagefind[extended]>=1.3.0",
    "sqlalchemy>=2.0.37",
    "toml>=0.10.2",
    "trogon>=0.6.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pagefind[extended]>=1.3.0",
    "ruff>=0.9.2",
    "types-toml>=0.10.8.20240310",
]
ai = [
    "openai>=1.65.4",
]

